@@ -6,9 +6,7 @@ Github Repository verfügbar unter: https://github.com/bianca482/Lab4_Billard
 Zum Starten der Applikation wird Java Version 11 benötigt.
 In der Klasse Main wurde die Größe der Applikation (SCENE_WIDTH, SCENE_HEIGHT) leicht abgeändert.
 
-Das Jar-File *billard.jar* kann mittels Kommandozeile wie folgt gestartet werden:
-*java -p  "<java_fx_path>" --add-modules javafx.controls,javafx.fxml -jar billard.jar* (wobei <java_fx_path> mit dem JAVA FX-Installationspfad des eigenen PCs angepasst werden muss.)
-
+Die Applikation kann über die Main-Klasse gestartet werden.
 
 ### Wichtige Klasse und deren Verwendung
 #### Player
